--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -317,8 +317,8 @@
                                  <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Sentence Survivor</h3>
-              <p>Students go in rotation, each saying a correct sentence with the target word, grammar, or topic. If a student makes a mistake, they’re “out.” Play continues around the group until only one student remains. Use with content from your unit. Great for reviewing vocabulary, grammar, and speaking under pressure.<strong> Best suited for Hand in Hand 3–4 as lower levels know limited vocabulary and grammar.</strong></p>
+              <h3>Spelling Survivor</h3>
+              <p>Students go in rotation, each spelling a target word correctly. <strong>Use familiar vocabulary from the Hand in Hand Scope & Sequence</strong> to match your students’ level. If a student misspells the word, they’re “out.” Play continues until only one student remains. Great for reviewing vocabulary, improving spelling, and building confidence under pressure.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -732,6 +732,7 @@
 
 </body>
 </html>
+
 
 
 
