--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -525,6 +525,26 @@
           </div>
         </article>
 
+
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Spelling Survivor</h3>
+              <p>Students go in rotation, each spelling a target word correctly. Use any words from the <a href="https://github.com/Outreach360-Inc/games/cambridge-wordlists.pdf" target="_blank">Cambridge Assessment English Wordlists</a> or words from the  <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank">Hand in Hand Scope & Sequence</a>. If a student misspells the word, they’re “out.” Play continues until only one student remains. Great for reviewing vocabulary, improving spelling, and building confidence under pressure.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/sentence-survivor-icon.png?raw=true"
+                  alt="Spelling Survivor icon"
+                  loading="lazy" decoding="async">
+              </div>
+                   <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+
             
                                                     <article class="card">
           <div class="body">
@@ -897,6 +917,7 @@
 
 </body>
 </html>
+
 
 
 
