--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -530,7 +530,7 @@
           <div class="body">
             <div class="text">
               <h3>Spelling Survivor</h3>
-              <p>Students go in rotation, each spelling a target word correctly. Use any words from the <a href="https://github.com/Outreach360-Inc/games/cambridge-wordlists.pdf" target="_blank">Cambridge Assessment English Wordlists</a> or words from the  <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank">Hand in Hand Scope & Sequence</a>. If a student misspells the word, they’re “out.” Play continues until only one student remains. Great for reviewing vocabulary, improving spelling, and building confidence under pressure.</p>
+              <p>Students go in rotation, each spelling a target word correctly. Use any words from the <a href="https://outreach360-inc.github.io/games/cambridge-wordlists.pdf" target="_blank">Cambridge Assessment English Wordlists</a> or words from the  <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank">Hand in Hand Scope & Sequence</a>. If a student misspells the word, they’re “out.” Play continues until only one student remains. Great for reviewing vocabulary, improving spelling, and building confidence under pressure.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -917,6 +917,7 @@
 
 </body>
 </html>
+
 
 
 
