--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -950,6 +950,25 @@
           </div>
         </article>
 
+
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Spelling Survivor</h3>
+              <p>Students go in rotation, each spelling a target word correctly. <a href="https://drive.google.com/drive/folders/1e6eHzbhmmE__FMzukJGsdERV8B-XUmM6?usp=sharing" target="_blank">Use words appropriate for your students' level</a>. If a student misspells the word, they’re “out.” Play continues until only one student remains. Great for reviewing vocabulary, improving spelling, and building confidence under pressure.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/sentence-survivor-icon.png?raw=true"
+                  alt="Spelling Survivor icon"
+                  loading="lazy" decoding="async">
+              </div>
+                   <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
                                                     <article class="card">
           <div class="body">
             <div class="text">
@@ -1289,6 +1308,7 @@
 
 </body>
 </html>
+
 
 
 
