--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -335,7 +335,7 @@
           <div class="body">
             <div class="text">
               <h3>Spelling Survivor</h3>
-              <p>Students go in rotation, each spelling a target word correctly. <a href="https://drive.google.com/drive/folders/18gIg_mV3yzxJP2nApCPq-_HdaVWdff3l?usp=sharing" target="_blank">For Oxford Discover Futures 1-3, use words from your students' current or previous level</a>. For higher levels, use words from the <a href="https://outreach360-inc.github.io/games/oxford5000.html" target="_blank">Oxford 5000</a> or the <a href="https://outreach360-inc.github.io/games/academic-word-list.html" target="_blank">Academic Word List</a>. If a student misspells the word, they’re “out.” Play continues until only one student remains. Great for reviewing vocabulary, improving spelling, and building confidence under pressure.</p>
+              <p>Students go in rotation, each spelling a target word correctly. For Oxford Discover Futures 1-3, use words from your <a href="https://drive.google.com/drive/folders/18gIg_mV3yzxJP2nApCPq-_HdaVWdff3l?usp=sharing" target="_blank">current or previous level</a>. For higher levels, use words from the <a href="https://outreach360-inc.github.io/games/oxford5000.html" target="_blank">Oxford 5000</a> or the <a href="https://outreach360-inc.github.io/games/academic-word-list.html" target="_blank">Academic Word List</a>. If a student misspells the word, they’re “out.” Play continues until only one student remains. Great for reviewing vocabulary, improving spelling, and building confidence under pressure.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1529,6 +1529,7 @@
 
 </body>
 </html>
+
 
 
 
