--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -350,7 +350,23 @@
           </div>
         </article>
 
-            
+                                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Quick Draw!</h3>
+              <p>Ready, set, sketch: the teacher calls a word and everyone has 30 seconds to draw it. Then everyone reveals their work and compares! Use words your students are familiar with. <strong>Use familiar vocabulary from the Hand in Hand Scope & Sequence</strong> to match your students’ level. Great for strengthening listening comprehension and rapid vocabulary recall!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/quick-draw-icon.png?raw=true"
+                  alt="Quick Draw! icon"
+                  loading="lazy" decoding="async">
+              </div>
+                               <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank"><button class="play-btn">Scope & Sequence</button></a>
+            </div>
+          </div>
+        </article>           
                                                 
         <article class="card">
           <div class="body">
@@ -732,6 +748,7 @@
 
 </body>
 </html>
+
 
 
 
