--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -564,6 +564,24 @@
           </div>
         </article>
 
+               <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Quick Draw!</h3>
+              <p>Ready, set, sketch: the teacher calls a word and everyone has 30 seconds to draw it. Then everyone reveals their work and compares! Use any words from the <a href="https://outreach360-inc.github.io/games/cambridge-wordlists.pdf" target="_blank">Cambridge Assessment English Wordlists</a> or words from the  <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank">Hand in Hand Scope & Sequence</a>. Great for strengthening listening comprehension and rapid vocabulary recall!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/quick-draw-icon.png?raw=true"
+                  alt="Quick Draw! icon"
+                  loading="lazy" decoding="async">
+              </div>
+                      <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>           
+
                   <article class="card">
           <div class="body">
             <div class="text">
@@ -917,6 +935,7 @@
 
 </body>
 </html>
+
 
 
 
