--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -912,7 +912,23 @@
           </div>
         </article>
 
-
+                                                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Around the World</h3>
+              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank">Free Rice: English Grammar</a>, <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank">Free Rice: English Spelling</a>, <a href="https://outreach360-inc.github.io/games/odd2.html" target="_blank">Odd One Out 2,</a> etc., or your own questions related to your unit language. Great for fun practice and versatility!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/around-world-icon.png?raw=true"
+                  alt="Around the World icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
             
                   <article class="card">
           <div class="body">
@@ -969,23 +985,25 @@
           </div>
         </article>
 
-                                                    <article class="card">
+
+
+                       <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Around the World</h3>
-              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank">Free Rice: English Grammar</a>, <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank">Free Rice: English Spelling</a>, <a href="https://outreach360-inc.github.io/games/odd2.html" target="_blank">Odd One Out 2,</a> etc., or your own questions related to your unit language. Great for fun practice and versatility!</p>
+              <h3>Quick Draw!</h3>
+              <p>Ready, set, sketch: the teacher calls a word and everyone has 30 seconds to draw it. Then everyone reveals their work and compares! <a href="https://drive.google.com/drive/folders/1e6eHzbhmmE__FMzukJGsdERV8B-XUmM6?usp=sharing" target="_blank">Use words appropriate for your students' level</a>. Great for strengthening listening comprehension and rapid vocabulary recall!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/around-world-icon.png?raw=true"
-                  alt="Around the World icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/quick-draw-icon.png?raw=true"
+                  alt="Quick Draw! icon"
                   loading="lazy" decoding="async">
               </div>
-                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+                      <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
             </div>
           </div>
-        </article>
+        </article>           
             
 
       <article class="card">
@@ -1308,6 +1326,7 @@
 
 </body>
 </html>
+
 
 
 
