--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -311,6 +311,24 @@
           </div>
         </article>
 
+                                                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Around the World</h3>
+              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-vocabulary?level=1" target="_blank">Free Rice: English</a>, <a href="https://outreach360-inc.github.io/games/millionaire-vocab.html" target="_blank">Who Wants to Be a Millionaire? – Vocabulary Edition</a>, <a href="https://outreach360-inc.github.io/games/description-detective2.html" target="_blank">Description Detective 2</a>, <a href="https://outreach360-inc.github.io/games/odd3.html" target="_blank">Odd One Out 3,</a> etc., or your own questions related to your unit language. Great for fun practice and versatility!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/around-world-icon.png?raw=true"
+                  alt="Around the World icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
 
                                                     <article class="card">
           <div class="body">
@@ -349,24 +367,6 @@
           </div>
         </article>
 
-            
-                                        <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>Around the World</h3>
-              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-vocabulary?level=1" target="_blank">Free Rice: English</a>, <a href="https://outreach360-inc.github.io/games/millionaire-vocab.html" target="_blank">Who Wants to Be a Millionaire? – Vocabulary Edition</a>, <a href="https://outreach360-inc.github.io/games/description-detective2.html" target="_blank">Description Detective 2</a>, <a href="https://outreach360-inc.github.io/games/odd3.html" target="_blank">Odd One Out 3,</a> etc., or your own questions related to your unit language. Great for fun practice and versatility!</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/around-world-icon.png?raw=true"
-                  alt="Around the World icon"
-                  loading="lazy" decoding="async">
-              </div>
-                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
-            </div>
-          </div>
-        </article>
 
 
             <article class="card">
@@ -383,6 +383,25 @@
                   loading="lazy" decoding="async">
               </div>
               <a href="https://www.britannica.com/games/revealed" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
+                        <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Story Bingo</h3>
+              <p>First, the teacher should choose a story from <a href="https://www.commonlit.org/" target="_blank">CommonLit.org</a> for students to read. Then, use the board as a <strong>post-reading reflection for individual or pair work</strong> — students thoughtfully fill in each square based on what they understood. This version is not competitive. Alternatively, use it as a <strong>group challenge or class competitio</strong> where students work together or compete to complete a row, column, or the whole board. Great for reading comprehension, reviewing story elements, encouraging deeper thinking, and making analysis more interactive.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bingo-icon.png?raw=true"
+                  alt="Story Bingo icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/story-bing.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -1529,6 +1548,7 @@
 
 </body>
 </html>
+
 
 
 
