--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -392,7 +392,7 @@
           <div class="body">
             <div class="text">
               <h3>Story Bingo</h3>
-              <p>First, the teacher should choose a story from <a href="https://www.commonlit.org/" target="_blank">CommonLit.org</a> for students to read. Then, use the board as a <strong>post-reading reflection for individual or pair work</strong> — students thoughtfully fill in each square based on what they understood. This version is not competitive. Alternatively, use it as a <strong>group challenge or class competition</strong> where students work together or compete to complete a row, column, or the whole board. Great for reading comprehension, reviewing story elements, encouraging deeper thinking, and making analysis more interactive.</p>
+              <p>First, the teacher should choose a story from <a href="https://www.commonlit.org/" target="_blank">CommonLit.org</a> for students to read. Use the board afterward as a <strong>post-reading reflection</strong> (individual or pair work), or as a <strong>group challenge or class competition</strong>. Each time the page loads, it generates a unique, randomized board so students get their own version. Great for reading comprehension, story elements, and interactive analysis.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1548,6 +1548,7 @@
 
 </body>
 </html>
+
 
 
 
