--- a/story-bingo.html
+++ b/story-bingo.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Story Bingo (Caps Titles)</title>
+    <title>Story Bingo</title>
+       <meta content="noindex, nofollow" name="robots"/>
+  <link rel="icon" type="image/png" sizes="32x32"
+        href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16"
+        href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
     <style>
         * {
             box-sizing: border-box;
@@ -11,7 +16,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: #f9faff;
+            background: #e5ffe0;
         }
         body {
             text-align: center;
@@ -71,7 +76,7 @@
     </style>
 </head>
 <body>
-    <h1>Story Bingo (Caps Titles)</h1>
+    <h1>Story Bingo</h1>
     <div class="bingo-board" id="bingo-board"></div>
 
     <script>
