--- a/phrasal-frenzy.html
+++ b/phrasal-frenzy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Phrasal Verbs</title>
+  <title>Phrasal Frenzy</title>
        <meta content="noindex, nofollow" name="robots"/>
   <link rel="icon" type="image/png" sizes="32x32"
         href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
@@ -94,7 +94,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="title">Phrasal Verbs</div>
+    <div class="title">Phrasal Frenzy</div>
     <div class="subtitle">Spin for a phrasal verb!</div>
 
     <div id="prompt" class="prompt" aria-live="polite"></div>
