--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -401,7 +401,7 @@
                   alt="Story Bingo icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="http://outreach360-inc.github.io/games/story-bing.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="http://outreach360-inc.github.io/games/story-bingo.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -1548,6 +1548,7 @@
 
 </body>
 </html>
+
 
 
 
