Update and rename story-bingo.html to story-bingo1.html

--- a/story-bingo1.html
+++ b/story-bingo1.html
@@ -72,6 +72,9 @@
             background-color: #6a5acd;
             color: #fff;
             cursor: default;
+            display: flex;
+align-items: center;
+justify-content: center;
         }
     </style>
 </head>
