--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -391,17 +391,17 @@
                         <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Story Bingo</h3>
+              <h3>Story Bingo 2</h3>
               <p>First, the teacher should choose a story from <a href="https://www.commonlit.org/" target="_blank">CommonLit.org</a> for students to read. Use the board afterward as a <strong>post-reading reflection</strong> (individual or pair work), or as a <strong>group challenge or class competition</strong>. Each time the page loads, it generates a unique, randomized board so students get their own version. Great for reading comprehension, story elements, and interactive analysis.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
                   src="https://github.com/Outreach360-Inc/games/blob/main/bingo-icon.png?raw=true"
-                  alt="Story Bingo icon"
+                  alt="Story Bingo 2 icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="http://outreach360-inc.github.io/games/story-bingo.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="http://outreach360-inc.github.io/games/story-bingo2.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -1548,6 +1548,7 @@
 
 </body>
 </html>
+
 
 
 
