--- a/story-bingo2.html
+++ b/story-bingo2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Story Bingo</title>
+    <title>Story Bingo 2</title>
        <meta content="noindex, nofollow" name="robots"/>
   <link rel="icon" type="image/png" sizes="32x32"
         href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
@@ -79,7 +79,7 @@ justify-content: center;
     </style>
 </head>
 <body>
-    <h1>Story Bingo</h1>
+    <h1>Story Bingo 2</h1>
     <div class="bingo-board" id="bingo-board"></div>
 
     <script>
