--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -717,6 +717,25 @@
           </div>
         </article>
 
+
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Story Bingo 1</h3>
+              <p>First, the teacher should choose a story from the Outreach360 Library for students to read. Use the board afterward as an <strong>individual post-reading reflection</strong> or as a <strong>group challenge or class competition</strong>. Each time the page loads, it generates a unique, randomized board so students get their own version. Great for reading comprehension, story elements, and interactive analysis.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bingo-icon.png?raw=true"
+                  alt="Story Bingo 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/story-bingo1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
       <article class="card">
           <div class="body">
             <div class="text">
@@ -1326,6 +1345,7 @@
 
 </body>
 </html>
+
 
 
 
